2008-06-09 - Sean Huber (shuber@einsteinindustries.com)
  * Added more tests
  * Updated documentation

2008-06-09 - Sean Huber (shuber@huberry.com)
	* Removed TextMate paths from $: for tests to avoid builder conflicts
	* Silenced output for ActiveRecord schema definitions in tests
	* Added support for multiple scopes