@@ -13,7 +13,7 @@ Example
 
   class TodoItem < ActiveRecord::Base
     belongs_to :todo_list
-    acts_as_list :scope => :todo_list
+    acts_as_list :scope => :todo_list_id
   end
 
   todo_list.first.move_to_bottom
